Implemented Docker-based deployment and updated README with Docker installation instructions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-spring.application.name=microfictionapi
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.application.name=microfiction
 #spring.jpa.show-sql=true
