--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=microfiction
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/microfiction_db
+spring.datasource.username=lynne
+spring.datasource.password=password
 #spring.jpa.show-sql=true
