--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MYSQLDB_USER=root
-MYSQLDB_ROOT_PASSWORD=123456
+MYSQLDB_USER=yu71
+MYSQLDB_ROOT_PASSWORD=53cret
 MYSQLDB_DATABASE=microfiction_db
-MYSQLDB_LOCAL_PORT=3306
+MYSQLDB_LOCAL_PORT=3308
 MYSQLDB_DOCKER_PORT=3306
 
 SPRING_LOCAL_PORT=8080
